<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:iconTint="@color/black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:iconTint="@color/black"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_company"
            android:title="@string/menu_list" />


        <item
            android:id="@+id/nav_update_details"
            android:icon="@drawable/ic_update_details"
            android:title="@string/menu_update_details" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact" />

    </group>


</menu>
