<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#8E1A3D">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="24dp">

                <RelativeLayout
                    android:id="@+id/layoutSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/edSearch"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:paddingStart="16dp"
                        android:gravity="center|start"
                        android:focusableInTouchMode="false"
                        android:hint="@string/menu_search"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent" />

                    <android.widget.ImageButton
                        android:id="@+id/btnSearch"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/searchbox"
                        android:gravity="center"
                        android:tint="@color/white"
                        android:src="@drawable/ic_search" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:background="#70c1c1c1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/top_categories"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAllCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/browse_all"
                android:textSize="12sp"
                android:textStyle="normal"
                app:drawableEndCompat="@drawable/ic_next" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="80dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/top_listing"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvListingAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/browse_all"
                android:textSize="12sp"
                android:textStyle="normal"
                app:drawableEndCompat="@drawable/ic_next" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewListing"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/mCardViewListingDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"


        app:cardBackgroundColor="#f3f3f2"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@color/app_color"

                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCloseCardView"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_back"
                    android:drawableTint="@color/white"

                    android:gravity="start|center"
                    android:text="back"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewListingDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>