<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:weightSum="3"

                android:layout_marginEnd="4dp"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name"
                    android:textSize="17sp"
                    android:layout_weight="1"
                    android:textColor="@color/app_color"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:textAllCaps="true"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/tvCategoryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_category"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:textColor="#707070"
                    android:textStyle="normal"
                    android:maxLines="1"/>

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="Business Business Description educe the Description educe the little font size of TOP Categories, Top Listing titles so will have more space o"
                    android:textColor="@color/hint_color"
                    android:textSize="12sp"
                    android:textStyle="normal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="bottom"

                android:layout_weight="1"
              >

                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/cvbox"
                        android:gravity="center"
                        android:padding="8dp"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <LinearLayout
                            android:id="@+id/layoutMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/bg_ripple"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_phone"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Mobile"
                                android:textColor="@color/white"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layoutEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/bg_ripple"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_email"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Email"
                                android:textColor="@color/white"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layoutWebsite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/bg_ripple"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_website"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Website"
                                android:textColor="@color/white"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layoutLandLine"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/bg_ripple"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_call"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/landline"
                                android:textColor="@color/white"
                                android:textSize="12sp" />
                        </LinearLayout>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </LinearLayout>




</androidx.cardview.widget.CardView>